--- a/v2.html
+++ b/v2.html
@@ -1,4 +1,4 @@
-<!-- ================= ORIGINAL DASHBOARD (v1) ================= -->
+<!-- THIS IS V2 - COZY EDITION -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -149,7 +149,7 @@
 </main>
 
 <footer>
-  Cozy Dashboard V2 • Library Edition
+  Cozy Dashboard V2 • Library Edition • 🌙
 </footer>
 
 <script>
