--- a/v2.html
+++ b/v2.html
@@ -256,6 +256,7 @@ const ridIndex = Math.floor((Date.now()/86400000)) % riddles.length;
 riddle.textContent = riddles[ridIndex];
 
 </script>
-</body>
+<body style="background: linear-gradient(135deg, #2c003e, #000814); border: 8px solid red;">
+
 </html>
 
